<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:iconifiedByDefault="false"
                android:queryHint="@string/query_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_edit"
                    android:textColor="@color/web_default"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/btn_qx"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/nav_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:autofillHints=""
                    android:drawableStart="@android:drawable/ic_menu_edit"
                    android:selectAllOnFocus="true"
                    android:hint="@string/nav_edit_hint"
                    android:inputType="text"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="@+id/btn_default"
                    app:layout_constraintStart_toStartOf="@+id/btn_qx"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <Button
                    android:id="@+id/btn_qx"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/xg1"
                    android:text="@string/qx"
                    app:layout_constraintEnd_toStartOf="@+id/btn_default"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nav_title" />

                <Button
                    android:id="@+id/btn_default"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/xg1"
                    android:text="@string/setDefault"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_qx"
                    app:layout_constraintTop_toTopOf="@+id/btn_qx" />

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/btnok"
                    android:text="@string/ok"
                    android:textColor="@color/teal_200"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn_default"
                    app:layout_constraintStart_toStartOf="@+id/btn_qx"
                    app:layout_constraintTop_toBottomOf="@+id/btn_default" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
<!--    侧滑界面-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="100dp"
        android:layout_gravity="start"
        android:background="#202020">
<!--        include引用-->
        <include
            android:id="@+id/included"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/sidemenu" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>