<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupmenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/web_default">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addFavorite"
        style="@style/popup_constraintLayout"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/pictureHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_star_border_24"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/addfavorite"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/addFavorite"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@id/addFavorite"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view3"
        style="@style/view_Style"
        android:background="@color/view_default"
        app:layout_constraintTop_toBottomOf="@+id/addFavorite"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addHome"
        style="@style/popup_constraintLayout"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/pictureHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_home_24"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/addhome2"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/addHome"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@id/addHome"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view4"
        style="@style/view_Style"
        android:background="@color/view_default"
        app:layout_constraintTop_toBottomOf="@+id/addHome"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shuaxin"
        style="@style/popup_constraintLayout"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/pictureHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/refresh_24"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/shuaxin"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/shuaxin"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@id/shuaxin"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        style="@style/view_Style"
        android:background="@color/view_default"
        app:layout_constraintEnd_toEndOf="@+id/shuaxin"
        app:layout_constraintTop_toBottomOf="@+id/shuaxin"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuopenjiexi"
        style="@style/popup_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/pictureHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_link_24"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/jiexi"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/menuopenjiexi"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@id/menuopenjiexi"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view2"
        style="@style/view_Style"
        android:background="@color/view_default"
        app:layout_constraintTop_toBottomOf="@+id/menuopenjiexi"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/closeweb"
        style="@style/popup_constraintLayout"
        app:layout_constraintTop_toTopOf="@id/view2"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/pictureHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/closeweb"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/closeweb"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@id/closeweb"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>